--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 }
 
 group = 'fi.evident.gradle.beanstalk'
-version = '0.0.2'
+version = '0.0.3-SNAPSHOT'
 
 plugindev {
     pluginId = 'fi.evident.beanstalk'
