--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "com.gradle.plugin-publish" version "0.9.0"
 }
 
-apply plugin: 'groovy'
+apply plugin: 'java-gradle-plugin'
 
 repositories {
     jcenter()
@@ -14,7 +14,6 @@ ext {
 
 dependencies {
     compile gradleApi()
-    compile localGroovy()
     compile "com.amazonaws:aws-java-sdk-elasticbeanstalk:$awsApiVersion"
     compile "com.amazonaws:aws-java-sdk-s3:$awsApiVersion"
 }
