--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 }
 
 group = 'fi.evident.gradle.beanstalk'
-version = '0.0.4'
+version '0.0.5'
 
 pluginBundle {
     website = 'https://github.com/EvidentSolutions/gradle-beanstalk-plugin'
