--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,11 @@ ext {
 dependencies {
     compile "com.amazonaws:aws-java-sdk-elasticbeanstalk:$awsApiVersion"
     compile "com.amazonaws:aws-java-sdk-s3:$awsApiVersion"
+    testCompile "junit:junit:4.12"
 }
 
 group = 'fi.evident.gradle.beanstalk'
-version '0.0.7'
+version '0.1.0'
 
 pluginBundle {
     website = 'https://github.com/EvidentSolutions/gradle-beanstalk-plugin'
